[package]
name = "cubeio"
version = "0.1.0"
authors = ["Benjamin Bolbrinker <benjamin.bolbrinker@kemi.uu.se>"]
edition = "2018"
description = "File io for Gaussian CUBE file format."
readme = "README.md"
repository = "git@github.com:benjaminbolbrinker/cubeio.rs.git"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
float-cmp = "0.8.0"
