[package]
name = "cubeio"
version = "0.2.0"
authors = ["Benjamin Bolbrinker <benjamin.bolbrinker@kemi.uu.se>"]
edition = "2018"
description = "File io for Gaussian CUBE file format."
readme = "README.md"
repository = "https://github.com/benjaminbolbrinker/cubeio.rs"
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
float-cmp = "0.8.0"
